--- a/engine-build/Dockerfile
+++ b/engine-build/Dockerfile
@@ -3,5 +3,6 @@ RUN apt-get update && apt-get install -y \
     xorg-dev \
     libgl-dev \
     libopenal-dev \
-    libvulkan-dev
+    libvulkan-dev \
+    mono-devel
 
