--- a/cpp-build/Dockerfile
+++ b/cpp-build/Dockerfile
@@ -9,6 +9,6 @@ RUN apt-get update && apt-get install -y \
     gdb \
     ninja-build \
     ccache
-RUN curl https://github.com/Kitware/CMake/releases/download/v3.15.0/cmake-3.15.0-Linux-x86_64.sh -L > cmake.sh && \
+RUN curl https://github.com/Kitware/CMake/releases/download/v3.16.0-rc1/cmake-3.16.0-rc1-Linux-x86_64.sh -L > cmake.sh && \
 	sh ./cmake.sh --skip-license --prefix=/usr/local && \
 	rm cmake.sh
